force-app/main/default/objects/smagicinteract__Optout_Settings__c/smagicinteract__Optout_Settings__c.object-meta.xml
<CustomObject>
    <label>Optout Settings</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optout Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>