force-app/main/default/objects/smagicinteract__Optout_Settings__c/fields/smagicinteract__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>